# predictions_prix_immo_dijon

./: .dockerignore  Dockerfile  README.md  pyproject.toml  real_estate.db
api/: database.py  dependencies.py  main.py  schemas.py
data/cleaned/: final_data.parquet  final_data_encoded.parquet
data/processed/: X_test.csv  quartiers_test.csv  quartiers_train.csv  target.csv  y_test.csv  y_train.csv
data/raw/: arrets-tram.geojson  arrets_bus_divia.geojson  caracteristiques_stations_velodi.geojson  commerces-de-dijon.geojson  equipements-enseignements.geojson
models/: model_utils.py  preprocessor.joblib  xgboost_model.joblib
notebooks/: eda.ipynb
results/metrics/: linear_metrics.json  xgboost_metrics.json
results/preprocessing_stats/: preprocessing_stats.json
results/spatial/: linear_spatial_stats.csv  xgboost_spatial_stats.csv
src/: real_estate_modeling.py  real_estate_preprocessor.py  spatial_analysis.py
