[project]
name = "predictions-prix-immo-dijon"
version = "0.1.0"
description = "Real estate price prediction system for Dijon"
authors = [
    { name = "Gaël Penessot", email = "gael.penessot@data-decision.io" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "geopandas>=1.0.1",
    "joblib>=1.4.2",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "pydantic>=2.10.5",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.37",
    "uvicorn>=0.34.0",
    "xgboost>=2.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=0.900",
    "ruff>=0.0.240"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100